Update case study pages, gallery carousels, and LinkedIn links
- Updated all case study pages to use single hero images and Success Stories carousel
- Updated gallery page carousels: events (Centuria 50th & Connect140), workshops (all folders), displays (all images from displays page)
- Replaced case studies section on gallery with interactive carousel
- Changed all LinkedIn links from personal profile to company page (bloom-n-events-co)
- Added large video file to .gitignore

--- a/case-study-hawaiian-neighbourhood-nibbles.html
+++ b/case-study-hawaiian-neighbourhood-nibbles.html
@@ -153,45 +153,19 @@
 
     <main>
         <!-- Hero Section -->
-        <section class="section-hero" style="padding-top: 100px;">
-            <div class="container">
-                <div class="heading-blush-bg text-center mb-4">
-                    <h1 class="display-4 content-heading-large">School Holiday Programme Drives Traffic and Family Engagement Across Five Shopping Centres in 5 Days</h1>
-                    <p class="lead">How Bloom'n Events Co delivered a successful food-based activity programme for Hawaiian across their suburban neighbourhood assets</p>
-                </div>
-                <div id="neighbourhoodNibblesHeroCarousel" class="carousel slide" data-bs-ride="carousel" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; overflow: hidden; margin-bottom: 2rem;">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#neighbourhoodNibblesHeroCarousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#neighbourhoodNibblesHeroCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#neighbourhoodNibblesHeroCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                        <button type="button" data-bs-target="#neighbourhoodNibblesHeroCarousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                        <button type="button" data-bs-target="#neighbourhoodNibblesHeroCarousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
-                    </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (1).jpeg" class="d-block w-100" alt="Kids enjoying Hawaiian Neighbourhood Nibbles food-based school holiday workshop" loading="eager" decoding="async" sizes="100vw" srcset="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (1)-480w.jpeg 480w, images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (1)-768w.jpeg 768w, images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (1)-1200w.jpeg 1200w, images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (1)-1600w.jpeg 1600w">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (2).jpg" class="d-block w-100" alt="Hands-on food-based activities engaging families across five Hawaiian shopping centres" loading="lazy" decoding="async" sizes="100vw" srcset="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (2)-480w.jpg 480w, images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (2)-768w.jpg 768w, images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (2)-1200w.jpg 1200w, images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (2)-1600w.jpg 1600w">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (5).jpg" class="d-block w-100" alt="Portable, consistent programme maintaining high-quality experience across multiple centre locations" loading="lazy" decoding="async" sizes="100vw" srcset="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (5)-480w.jpg 480w, images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (5)-768w.jpg 768w, images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (5)-1200w.jpg 1200w, images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (5)-1600w.jpg 1600w">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (3).jpg" class="d-block w-100" alt="Children participating in fun and educational food-based activities that encouraged dwell time" loading="lazy" decoding="async" sizes="100vw" srcset="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (3)-480w.jpg 480w, images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (3)-768w.jpg 768w, images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (3)-1200w.jpg 1200w, images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (3)-1600w.jpg 1600w">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (4).jpg" class="d-block w-100" alt="Unique food-based experience that drove traffic uplifts across participating shopping centres" loading="lazy" decoding="async">
+        <section class="hero-section" aria-label="Hero">
+            <div class="hero-background">
+                <img src="images/Hawaiian Neighbourhood Nibbles/Neighbourhood-Nibbles (5).jpg" class="hero-image" alt="School Holiday Programme Drives Traffic Across 5 Centres in 5 Days" loading="eager" decoding="async" width="1600" height="900">
+                <div class="hero-overlay"></div>
+            </div>
+            <div class="hero-content">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-10 text-center">
+                            <h1 class="hero-headline">School Holiday Programme Drives Traffic and Family Engagement Across Five Shopping Centres in 5 Days</h1>
+                            <p class="hero-subhead">How Bloom'n Events Co delivered a successful food-based activity programme for Hawaiian across their suburban neighbourhood assets</p>
                         </div>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#neighbourhoodNibblesHeroCarousel" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#neighbourhoodNibblesHeroCarousel" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
                 </div>
             </div>
         </section>
@@ -342,6 +316,75 @@
                     </div>
                 </section>
 
+                <!-- Related Case Studies -->
+                <section class="section-main" aria-labelledby="relatedCaseStudiesHeading">
+                    <div class="container">
+                        <h2 id="relatedCaseStudiesHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">Related Case Studies</h2>
+                        <div class="success-stories-carousel-wrapper">
+                            <button class="success-stories-carousel-arrow success-stories-carousel-prev" aria-label="Previous case study" type="button">
+                                <i class="bi bi-chevron-left"></i>
+                            </button>
+                            <div class="success-stories-carousel-container">
+                                <div class="success-stories-carousel-track" id="neighbourhoodNibblesSuccessStoriesCarouselTrack">
+                                    <div class="success-stories-carousel-card" data-index="0">
+                                        <div class="card h-100 shadow">
+                                            <img src="images/Centuria Connect140/Connect140 (10).JPG" class="card-img-top" alt="Centuria Connect140 Networking Event" loading="lazy" decoding="async" width="1600" height="900">
+                                            <div class="card-body text-center">
+                                                <h3 class="card-title text-gold mb-3">Corporate Networking Event Delivers Meaningful Connections</h3>
+                                                <p class="card-text text-charcoal">How we created an engaging atmosphere for Centuria Capital that naturally facilitated meaningful conversations among Perth business professionals.</p>
+                                                <a href="case-study-centuria-connect140.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="success-stories-carousel-card" data-index="1">
+                                        <div class="card h-100 shadow">
+                                            <img src="images/Home/Food Festival Celebrates Tenant Opening & Drives Engagement CASE STUDY IMAGE.jpg" class="card-img-top" alt="Hawaiian Forrestfield Food Festival" loading="lazy" decoding="async" width="1600" height="900">
+                                            <div class="card-body text-center">
+                                                <h3 class="card-title text-gold mb-3">Food Festival Celebrates Tenant Opening & Drives Engagement</h3>
+                                                <p class="card-text text-charcoal">One-day event for Hawaiian Shopping Centres that celebrated a key tenant opening while showcasing food diversity and driving community engagement.</p>
+                                                <a href="case-study-hawaiian-forrestfield.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="success-stories-carousel-card" data-index="2">
+                                        <div class="card h-100 shadow">
+                                            <img src="images/Home/School Holiday Activity Drives Traffic Across 5 Centres in 5 Days CASE STUDY IMAGE.jpg" class="card-img-top" alt="Hawaiian Neighbourhood Nibbles School Holiday Programme" loading="lazy" decoding="async" width="1600" height="900">
+                                            <div class="card-body text-center">
+                                                <h3 class="card-title text-gold mb-3">School Holiday Programme Drives Traffic Across 5 Centres in 5 Days</h3>
+                                                <p class="card-text text-charcoal">Food-based July school holiday activity across seven Hawaiian shopping centres that drove traffic uplifts and encouraged family dwell time.</p>
+                                                <a href="case-study-hawaiian-neighbourhood-nibbles.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="success-stories-carousel-card" data-index="3">
+                                        <div class="card h-100 shadow">
+                                            <img src="images/Centuria 50th Birthday/efea378d-9bd1-4906-9237-db1ed574869c.jpg" class="card-img-top" alt="140 St Georges Terrace 50th Birthday Celebration" loading="lazy" decoding="async" width="1600" height="900">
+                                            <div class="card-body text-center">
+                                                <h3 class="card-title text-gold mb-3">Landmark Anniversary Event Honours Legacy and Signals Future</h3>
+                                                <p class="card-text text-charcoal">Bespoke 50th Birthday Celebration for 140 St Georges Terrace that honoured the building's legacy while presenting it as contemporary and future-focused.</p>
+                                                <a href="case-study-centuria-50th-birthday.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="success-stories-carousel-card" data-index="4">
+                                        <div class="card h-100 shadow">
+                                            <img src="images/Centuria Breast Cancer/Centuria Breast Cancer Oct25.1.jpg" class="card-img-top" alt="Breast Cancer Awareness Day & Spring Activation" loading="lazy" decoding="async" width="1600" height="900">
+                                            <div class="card-body text-center">
+                                                <h3 class="card-title text-gold mb-3">Purpose-Led Installation Creates Meaningful Connection</h3>
+                                                <p class="card-text text-charcoal">Two-phase evolving installation honouring Breast Cancer Awareness Day while transitioning into a vibrant Spring activation at 140 St Georges Terrace.</p>
+                                                <a href="case-study-centuria-breast-cancer.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="success-stories-carousel-arrow success-stories-carousel-next" aria-label="Next case study" type="button">
+                                <i class="bi bi-chevron-right"></i>
+                            </button>
+                        </div>
+                    </div>
+                </section>
+
                 <!-- CTA -->
                 <section class="mb-5" aria-labelledby="ctaHeading">
                     <div class="container">
@@ -415,7 +458,7 @@
                     <div class="d-flex flex-row justify-content-center gap-3 social-links social-spacing">
                         <a href="https://www.facebook.com/bloomneventsco/" aria-label="Facebook" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
                         <a href="https://www.instagram.com/bloomneventsco/" aria-label="Instagram" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
-                        <a href="https://www.linkedin.com/in/tamara-de-lange-nee-lilly-3421825b/" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/company/bloom-n-events-co/" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
                         <a href="https://pin.it/1K3o7UFvI" aria-label="Pinterest" target="_blank" rel="noopener noreferrer"><i class="bi bi-pinterest"></i></a>
                         <a href="https://www.tiktok.com/@bloomneventsco" aria-label="TikTok" target="_blank" rel="noopener noreferrer"><i class="bi bi-tiktok"></i></a>
                     </div>
