--- a/events.html
+++ b/events.html
@@ -238,21 +238,22 @@
 
     <main>
         <!-- Hero Section -->
-        <section class="section-hero">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-6 mb-4 mb-lg-0">
-                        <div style="background-color: var(--coreChampers); border: 2px solid var(--coreGold); border-radius: 12px; padding: 16px 20px;">
-                            <h1 class="display-4 content-heading-large text-gold heading-blush-bg mb-3">Professional Corporate Event Planning in Perth</h1>
-                            <p class="lead text-charcoal mb-4">We design and deliver immersive corporate experiences that connect, elevate, and inspire. From networking events to product launches, our full-service approach ensures every detail is handled with precision and artistry.</p>
-                            <div>
+        <section class="hero-section" aria-label="Hero">
+            <div class="hero-background">
+                <img src="images/Centuria 50th Birthday/60a182ec-9f16-4f20-919b-59e9451bb4a8.jpg" class="hero-image" alt="Professional corporate event setup in Perth" loading="eager" decoding="async" width="1600" height="900">
+                <div class="hero-overlay"></div>
+            </div>
+            <div class="hero-content">
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-10 text-center">
+                            <h1 class="hero-headline">Professional Corporate Event Planning in Perth</h1>
+                            <p class="hero-subhead">We design and deliver immersive corporate experiences that connect, elevate, and inspire. From networking events to product launches, our full-service approach ensures every detail is handled with precision and artistry.</p>
+                            <div class="hero-cta">
                                 <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Get a Free Consultation</a>
                                 <a href="#case-studies" class="btn btn-outline-gold btn-lg mb-3">View Case Studies</a>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <img src="images/Centuria Connect140/Connect140 (1).jpg" class="img-fluid rounded shadow" alt="Professional corporate event setup in Perth" loading="eager" decoding="async" width="1600" height="900">
                     </div>
                 </div>
             </div>
@@ -278,17 +279,35 @@
                     </div>
                     <div class="col-12">
                         <div class="row g-2">
-                            <div class="col-6">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="images/Centuria Connect140/Connect140 (1).jpg" class="img-fluid rounded shadow" alt="Corporate networking event setup" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-6">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="images/Centuria Connect140/Connect140 (2).JPG" class="img-fluid rounded shadow" alt="Brand activation at business event" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-6">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="images/Centuria Connect140/Connect140 (3).jpg" class="img-fluid rounded shadow" alt="Conference setup with arrangements" loading="lazy" decoding="async">
                             </div>
-                            <div class="col-6">
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
                                 <img src="images/Centuria Connect140/Connect140 (4).JPG" class="img-fluid rounded shadow" alt="Product launch event" loading="lazy" decoding="async">
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
+                                <img src="images/Centuria 50th Birthday/00ef2aa7-6a7e-45d9-9613-0f17e9c0941c.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
+                                <img src="images/Centuria 50th Birthday/02f37f68-0f92-4a73-ab31-9214554139ec.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
+                                <img src="images/Centuria 50th Birthday/064a7a51-766f-4fcf-b1df-f934851ef16c.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
+                                <img src="images/Centuria 50th Birthday/1292f05a-3499-44dc-a9b9-09a7bd33d047.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
+                                <img src="images/Centuria 50th Birthday/1fd2ee64-1cbe-4d47-8087-c8d748149530.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
+                            </div>
+                            <div class="col-12 col-sm-6 col-md-4 col-lg">
+                                <img src="images/Centuria 50th Birthday/25d854af-18a7-46ed-9cb8-1e3d7a818715.jpg" class="img-fluid rounded shadow" alt="Elegant 50th birthday celebration" loading="lazy" decoding="async">
                             </div>
                         </div>
                     </div>
@@ -519,47 +538,67 @@
         <section class="section-main" aria-labelledby="caseStudiesHeading" id="case-studies">
             <div class="container">
                 <h2 id="caseStudiesHeading" class="text-gold heading-blush-bg content-heading-large text-center mb-5">Related Case Studies</h2>
-                <div class="row g-4">
-                    <div class="col-md-6 col-lg-4">
-                        <div class="card h-100 shadow">
-                            <img src="images/Centuria Connect140/Connect140 (10).JPG" class="card-img-top" alt="Centuria Connect140 Networking Event" loading="lazy" decoding="async" width="1600" height="900" style="height: 250px; object-fit: cover;">
-                            <div class="card-body">
-                                <h3 class="text-gold mb-3">Corporate Networking Event Delivers Meaningful Connections</h3>
-                                <p class="text-charcoal">How we created an engaging atmosphere for Centuria Capital that naturally facilitated meaningful conversations among Perth business professionals.</p>
-                                <a href="case-study-centuria-connect140.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                <div class="success-stories-carousel-wrapper">
+                    <button class="success-stories-carousel-arrow success-stories-carousel-prev" aria-label="Previous case study" type="button">
+                        <i class="bi bi-chevron-left"></i>
+                    </button>
+                    <div class="success-stories-carousel-container">
+                        <div class="success-stories-carousel-track" id="eventsSuccessStoriesCarouselTrack">
+                            <div class="success-stories-carousel-card" data-index="0">
+                                <div class="card h-100 shadow">
+                                    <img src="images/Centuria Connect140/Connect140 (10).JPG" class="card-img-top" alt="Centuria Connect140 Networking Event" loading="lazy" decoding="async" width="1600" height="900">
+                                    <div class="card-body text-center">
+                                        <h3 class="card-title text-gold mb-3">Corporate Networking Event Delivers Meaningful Connections</h3>
+                                        <p class="card-text text-charcoal">How we created an engaging atmosphere for Centuria Capital that naturally facilitated meaningful conversations among Perth business professionals.</p>
+                                        <a href="case-study-centuria-connect140.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="success-stories-carousel-card" data-index="1">
+                                <div class="card h-100 shadow">
+                                    <img src="images/Home/Food Festival Celebrates Tenant Opening & Drives Engagement CASE STUDY IMAGE.jpg" class="card-img-top" alt="Hawaiian Forrestfield Food Festival" loading="lazy" decoding="async" width="1600" height="900">
+                                    <div class="card-body text-center">
+                                        <h3 class="card-title text-gold mb-3">Food Festival Celebrates Tenant Opening & Drives Engagement</h3>
+                                        <p class="card-text text-charcoal">One-day event for Hawaiian Shopping Centres that celebrated a key tenant opening while showcasing food diversity and driving community engagement.</p>
+                                        <a href="case-study-hawaiian-forrestfield.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="success-stories-carousel-card" data-index="2">
+                                <div class="card h-100 shadow">
+                                    <img src="images/Home/School Holiday Activity Drives Traffic Across 5 Centres in 5 Days CASE STUDY IMAGE.jpg" class="card-img-top" alt="Hawaiian Neighbourhood Nibbles School Holiday Programme" loading="lazy" decoding="async" width="1600" height="900">
+                                    <div class="card-body text-center">
+                                        <h3 class="card-title text-gold mb-3">School Holiday Programme Drives Traffic Across 5 Centres in 5 Days</h3>
+                                        <p class="card-text text-charcoal">Food-based July school holiday activity across seven Hawaiian shopping centres that drove traffic uplifts and encouraged family dwell time.</p>
+                                        <a href="case-study-hawaiian-neighbourhood-nibbles.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="success-stories-carousel-card" data-index="3">
+                                <div class="card h-100 shadow">
+                                    <img src="images/Centuria 50th Birthday/efea378d-9bd1-4906-9237-db1ed574869c.jpg" class="card-img-top" alt="140 St Georges Terrace 50th Birthday Celebration" loading="lazy" decoding="async" width="1600" height="900">
+                                    <div class="card-body text-center">
+                                        <h3 class="card-title text-gold mb-3">Landmark Anniversary Event Honours Legacy and Signals Future</h3>
+                                        <p class="card-text text-charcoal">Bespoke 50th Birthday Celebration for 140 St Georges Terrace that honoured the building's legacy while presenting it as contemporary and future-focused.</p>
+                                        <a href="case-study-centuria-50th-birthday.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="success-stories-carousel-card" data-index="4">
+                                <div class="card h-100 shadow">
+                                    <img src="images/Centuria Breast Cancer/Centuria Breast Cancer Oct25.1.jpg" class="card-img-top" alt="Breast Cancer Awareness Day & Spring Activation" loading="lazy" decoding="async" width="1600" height="900">
+                                    <div class="card-body text-center">
+                                        <h3 class="card-title text-gold mb-3">Purpose-Led Installation Creates Meaningful Connection</h3>
+                                        <p class="card-text text-charcoal">Two-phase evolving installation honouring Breast Cancer Awareness Day while transitioning into a vibrant Spring activation at 140 St Georges Terrace.</p>
+                                        <a href="case-study-centuria-breast-cancer.html" class="btn btn-gold btn-sm">Read Case Study</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="card h-100 shadow">
-                            <img src="images/Centuria 50th Birthday/efea378d-9bd1-4906-9237-db1ed574869c.jpg" class="card-img-top" alt="140 St Georges Terrace 50th Birthday Celebration" loading="lazy" decoding="async" width="1600" height="900" style="height: 250px; object-fit: cover;">
-                            <div class="card-body">
-                                <h3 class="text-gold mb-3">Landmark Anniversary Event Honours Legacy</h3>
-                                <p class="text-charcoal">Bespoke 50th Birthday Celebration for 140 St Georges Terrace that honoured the building's legacy while presenting it as contemporary and future-focused.</p>
-                                <a href="case-study-centuria-50th-birthday.html" class="btn btn-gold btn-sm">Read Case Study</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="card h-100 shadow">
-                            <img src="images/Hawaiian World Of Flavours/Hawaian250315-0173.jpg" class="card-img-top" alt="Hawaiian Forrestfield Food Festival" loading="lazy" decoding="async" width="1600" height="900" style="height: 250px; object-fit: cover;">
-                            <div class="card-body">
-                                <h3 class="text-gold mb-3">Food Festival Celebrates Tenant Opening & Drives Engagement</h3>
-                                <p class="text-charcoal">One-day event for Hawaiian Shopping Centres that celebrated a key tenant opening while showcasing food diversity and driving community engagement.</p>
-                                <a href="case-study-hawaiian-forrestfield.html" class="btn btn-gold btn-sm">Read Case Study</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="card h-100 shadow">
-                            <img src="images/Centuria Breast Cancer/Centuria Breast Cancer Oct25.1.jpg" class="card-img-top" alt="Breast Cancer Awareness Day & Spring Activation" loading="lazy" decoding="async" width="1600" height="900" style="height: 250px; object-fit: cover;">
-                            <div class="card-body">
-                                <h3 class="text-gold mb-3">Purpose-Led Installation Creates Meaningful Connection</h3>
-                                <p class="text-charcoal">Two-phase evolving installation honouring Breast Cancer Awareness Day while transitioning into a vibrant Spring activation at 140 St Georges Terrace.</p>
-                                <a href="case-study-centuria-breast-cancer.html" class="btn btn-gold btn-sm">Read Case Study</a>
-                            </div>
-                        </div>
-                    </div>
+                    <button class="success-stories-carousel-arrow success-stories-carousel-next" aria-label="Next case study" type="button">
+                        <i class="bi bi-chevron-right"></i>
+                    </button>
                 </div>
             </div>
         </section>
@@ -636,7 +675,7 @@
                     <div class="d-flex flex-row justify-content-center gap-3 social-links social-spacing">
                         <a href="https://www.facebook.com/bloomneventsco/" aria-label="Facebook" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
                         <a href="https://www.instagram.com/bloomneventsco/" aria-label="Instagram" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
-                        <a href="https://www.linkedin.com/in/tamara-de-lange-nee-lilly-3421825b/" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
+                        <a href="https://www.linkedin.com/company/bloom-n-events-co/" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="bi bi-linkedin"></i></a>
                         <a href="https://pin.it/1K3o7UFvI" aria-label="Pinterest" target="_blank" rel="noopener noreferrer"><i class="bi bi-pinterest"></i></a>
                         <a href="https://www.tiktok.com/@bloomneventsco" aria-label="TikTok" target="_blank" rel="noopener noreferrer"><i class="bi bi-tiktok"></i></a>
                     </div>
